Fixing styling of scores so they dont overlap the stat tooltips

--- a/style.css
+++ b/style.css
@@ -427,7 +427,7 @@ body {
 	left:380px;
 	text-align:center;
 	padding-top:50em;
-	height:30em;
+	height:10em;
 	width:320px;
 }
 
